# liblightports

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
lightports/: CMakeLists.txt  controls.h  core.h
lightports/base/: CMakeLists.txt  application.cpp  application.h  charcodecs.h  configfile.cpp  date.cpp  date.h  module.cpp  module.h  path.h  resources.cpp  resources.h  systempaths.cpp  systempaths.h  timeout.cpp  timeout.h  timer.cpp
lightports/com/: CMakeLists.txt  comcontext.cpp  comptr.h  oleptr.h
lightports/controls/: CMakeLists.txt  control.cpp  control.h  gdiplus.h  graphicscontrol.cpp  graphicscontrol.h  messagesink.cpp  messagesink.h  onscreendisplay.cpp  onscreendisplay.h  toplevelwindow.cpp  toplevelwindow.h  utilwindow.cpp  window.cpp  window.h
lightports/core/: CMakeLists.txt  bits.h  charcodecs.h  debug.cpp  debug.h  debugstream.h  exception.cpp  exception.h  geometry.h  macros.h  memory.h
lightports/dll/: CMakeLists.txt  dll.cpp  dll.h
lightports/extra/: CMakeLists.txt  autostart.cpp  charcodecs.cpp  charcodecs.h  configfile.h  cursor.h  hook.cpp  hook.h  icon.h  menu.h  process.cpp  process.h  rundll.cpp  rundll.h  shortcut.h  systeminformation.h  trayicon.cpp  trayicon.h
lightports/ipc/: CMakeLists.txt  ipcconnection.cpp  ipcdata.h
lightports/os/: CMakeLists.txt  process.cpp  process.h
lightports/registry/: CMakeLists.txt
lightports/shell/: CMakeLists.txt  shelllink.cpp  shelllink.h  systempaths.cpp  trayicon.cpp  trayicon.h
lightports/user/: CMakeLists.txt  application.cpp  application.h  cursor.h  geometry.h  hook.h  hotkey.h  icon.h  menu.h  resources.cpp  resources.h  shortcut.h  systeminformation.h  timeout.cpp  timeout.h  timer.cpp
